added javafx library

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>14</version>
+        </dependency>
     </dependencies>
 
     <build>
