--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 
     <build>
         <plugins>
+            <!-- compiler config -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
