--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
+            <!-- double check version -->
             <version>11</version>
         </dependency>
         <dependency>
